# Buena

./: .env.example  .gitignore  DECISIONS.md  Dockerfile  KEYSTONE.md  README.md  docker-compose.yml  pyproject.toml
Extracted_demo/stammdaten/: stammdaten.json
backend/: __init__.py  config.py  main.py  scheduler.py
backend/api/: admin.py  buildings.py  chat.py  events.py  files.py  portfolio.py  properties.py  property_files.py  settings.py  signals.py  source_links.py  sse.py  uploads.py  webhooks.py
backend/db/: models.py  schema.sql  session.py
backend/pipeline/: __init__.py  applier.py  coverage.py  differ.py  events.py  extractor.py  lexicon.py  materializer.py  renderer.py  router.py  structured_extractors.py  worker.py
backend/services/: __init__.py  aikido.py  ask.py  entire.py  erp_poller.py  gemini.py  imap_poller.py  lang.py  onboarding.py  pdf_extractor.py  pioneer.py  pioneer_llm.py  replay.py  slack_webhook.py  tavily.py
backend/signals/: __init__.py  drafter.py  evaluator.py
backend/tests/: test_differ.py  (+11 more)
connectors/: __init__.py  base.py  buena_archive.py  buena_event_loader.py  buena_loader.py  camt_bank.py  cli.py  cost_ledger.py  csv_stammdaten.py  document_type.py  eml_archive.py  incremental_runner.py  migrations.py  pdf_invoice_archive.py  pdf_letter_archive.py  redact.py
eval/: README.md  __init__.py  metrics.py  runner.py
mcp_server/: README.md  main.py  tools.py
mock_erp/: main.py
scripts/: phase11_step1_verify.py  synthesize_demo_stammdaten.py
seed/: __init__.py  demo_bootstrap.py  realistic_data.py  seed.py
(+21 files in other folders)
