[project]
name = "keystone"
version = "0.1.0"
description = "Keystone — the operational brain for property management."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    "asyncpg>=0.29",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "structlog>=24.1",
    "apscheduler>=3.10",
    "google-generativeai>=0.8",
    "tavily-python>=0.5",
    "imapclient>=3.0",
    "pdfplumber>=0.11",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "jinja2>=3.1",
    "langdetect>=1.0",
    "langchain>=0.3",
    "langchain-core",
    "langchain-community",
    "langchain-postgres",
    "langgraph>=0.2",
    "gliner2>=0.0.1",
    "torch>=2.0",
    "openai",
    "sentence-transformers",
    "pypdf",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "seed*", "mcp_server*", "mock_erp*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = []
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
